[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/Characters/Monster/Monster.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/HellCat.gd" type="Script" id=2]
[ext_resource path="res://GFX/Enemies/hell-cat/hell-gato-3.png" type="Texture" id=3]
[ext_resource path="res://GFX/Enemies/enemy-death/enemy-death-1.png" type="Texture" id=4]
[ext_resource path="res://GFX/Enemies/enemy-death/enemy-death-2.png" type="Texture" id=5]
[ext_resource path="res://GFX/Enemies/enemy-death/enemy-death-3.png" type="Texture" id=6]
[ext_resource path="res://GFX/Enemies/enemy-death/enemy-death-4.png" type="Texture" id=7]
[ext_resource path="res://GFX/Enemies/enemy-death/enemy-death-5.png" type="Texture" id=8]
[ext_resource path="res://GFX/Enemies/hell-cat/hell-gato-4.png" type="Texture" id=9]
[ext_resource path="res://GFX/Enemies/hell-cat/hell-gato-1.png" type="Texture" id=10]
[ext_resource path="res://GFX/Enemies/hell-cat/hell-gato-2.png" type="Texture" id=11]
[ext_resource path="res://Scripts/StateMachine/State/HellCat/idle_hellcat.gd" type="Script" id=12]
[ext_resource path="res://Scripts/StateMachine/State/HellCat/run_hellcat.gd" type="Script" id=13]
[ext_resource path="res://Scripts/StateMachine/State/HellCat/hit_hellcat.gd" type="Script" id=14]
[ext_resource path="res://Scripts/StateMachine/State/HellCat/die_hellcat.gd" type="Script" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.6112, 12.263 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26.9161, 15.1746 )

[sub_resource type="Animation" id=4]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="HellCat" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )
animation = "run"
frame = 1

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( -1.226, 13.7148 )
shape = SubResource( 2 )

[node name="Stats" parent="." index="3"]
speed = 80

[node name="idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 12 )

[node name="run" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 13 )

[node name="hit" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 14 )

[node name="die" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 15 )

[node name="CollisionShape2D2" parent="DetectBody" index="0"]
position = Vector2( -1.99032, 11.7429 )
shape = SubResource( 3 )

[node name="DetectEnemy" type="Area2D" parent="." index="6"]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectEnemy" index="0"]
position = Vector2( 0.418106, 2.09061 )
polygon = PoolVector2Array( -28.4572, 1.94178, -125.127, -32.4247, -125.127, 31.3472 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]
anims/hit = SubResource( 4 )

[node name="Timer" type="Timer" parent="." index="8"]
wait_time = 2.0
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="DetectBody" to="." method="_on_DetectBody_area_entered"]
[connection signal="body_entered" from="DetectEnemy" to="." method="_on_DetectEnemy_body_entered"]
[connection signal="body_exited" from="DetectEnemy" to="." method="_on_DetectEnemy_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
